section layout, hero initial styling, nav styling

--- a/index.html
+++ b/index.html
@@ -11,8 +11,49 @@
 
   <link rel="stylesheet" href="styles.css">
 
-
 </head>
+
+<header>
+  <img  class="logo" src="./assets/Asset 2@3x.png">
+
+  <nav>
+    <ul>
+      <li><a>Home</a></li>
+      <li><a>Order</a></li>
+      <li><a>About</a></li>
+      <li><a>Contact</a></li>
+    </ul>
+  </nav>
+
+</header>
+
+
+
+<main>
+  <section class="hero">
+    <article>
+      <h3>Design the Ring of your Dreams</h3>
+      <p> Bring your moment to life </p>
+
+
+
+    </article>
+
+  </section>
+
+  <section class="design">
+
+  </section>
+
+  <section class="about">
+
+  </section>
+
+</main>
+
+<footer>
+
+</footer>
 
 
 </html>
