info section styling, video styling, initial card styling

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
 
 </head>
 
-<header>
-  <img  class="logo" src="./assets/Asset 2@3x.png">
+<header class="nav header">
+  <img  class="logo" src="./assets/Asset 4@3x.png">
+
+  <nav>
+    <ul>
+      <li><a>Home</a></li>
+      <li><a>Order</a></li>
+      <li><a>About</a></li>
+      <li><a>Contact</a></li>
+    </ul>
+  </nav>
+
 
   <nav>
     <ul>
@@ -32,13 +42,65 @@
 <main>
   <section class="hero">
     <article>
-      <h1>Design the Ring of your Dreams</h3>
+      <h2>DESIGN THE RING OF YOUR DREAMS</h2>
       <p> Bring your moment to life </p>
     </article>
 
   </section>
 
   <section class="design">
+
+
+    <article class="design container">
+
+      <section class="video">
+        <video autoplay loop controls >
+          <source src="./assets/ring.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+      </section>
+
+      <section class="info">
+        <section class="info header">
+          <h3>HIGH QUALITY <br> DESIGNS TO <br>CHERISH FOREVER</h3>
+          <p> Our Artisans highlight trending styles with the expertise of traditional techniques to create your own custom piece</p>
+        </section>
+
+        <section class="info cards">
+
+          <article class="info card">
+            <h6>AMAZING <br> VALUE</h6>
+            <p></p>
+
+          </article>
+
+          <article class="info card">
+            <h6>Piece of Mind</h6>
+            <p></p>
+
+
+          </article>
+          <article class="info card">
+            <h6>Amazing Value</h6>
+            <p></p>
+
+
+          </article>
+          <article class="info card">
+            <h6>Amazing Value</h6>
+            <p></p>
+
+
+          </article>
+
+          </section>
+
+
+        </section >
+
+
+
+    </article>
 
   </section>
 
