design section styling done, initial html for diamond selector section

--- a/index.html
+++ b/index.html
@@ -40,16 +40,15 @@
 
 
 <main>
+
   <section class="hero">
     <article>
       <h2>DESIGN THE RING OF YOUR DREAMS</h2>
       <p> Bring your moment to life </p>
     </article>
-
   </section>
 
   <section class="design">
-
 
     <article class="design container">
 
@@ -70,41 +69,100 @@
 
           <article class="info card">
             <h6>AMAZING <br> VALUE</h6>
-            <p></p>
+            <p>The highest quality design at a great price.</p>
 
           </article>
 
           <article class="info card">
-            <h6>Piece of Mind</h6>
-            <p></p>
+            <h6>PIECE OF <br> MIND</h6>
+            <p>30 day returns, diamond price match guarantee and more.</p>
 
 
           </article>
           <article class="info card">
-            <h6>Amazing Value</h6>
-            <p></p>
+            <h6>EXPERT <br> GUIDANCE</h6>
+            <p>Original Online Jeweler since 1999</p>
 
 
           </article>
           <article class="info card">
-            <h6>Amazing Value</h6>
-            <p></p>
-
+            <h6>INSPIRING <br> ASSORTMENT</h6>
+            <p>The perfect pieces for every assortment</p>
 
           </article>
 
           </section>
-
-
         </section >
-
-
-
     </article>
 
   </section>
 
   <section class="about">
+
+    <div class="diamond header">
+      <h6>LAB-GROWN DIAMONDS</h6>
+      <h1>BECAUSE YOUR OCCASION IS BRILLIANT </h1>
+      <p>Fancy-shaped Diamonds give you a chance to express your unique personality</p>
+      <img src ="./assets/diamond.png" width="50%">
+
+    </div>
+
+    <div class="diamond selector">
+
+      <article class="diamond">
+       <img>
+       <p>diamond </p>
+      </article>
+
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+      <article class="diamond">
+        <img>
+        <p>diamond </p>
+       </article>
+
+
+    </div>
+
 
   </section>
 
