--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="Jovanni Morales">
 
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
 </head>
 
@@ -103,62 +104,65 @@
       <h6>LAB-GROWN DIAMONDS</h6>
       <h1>BECAUSE YOUR OCCASION IS BRILLIANT </h1>
       <p>Fancy-shaped Diamonds give you a chance to express your unique personality</p>
-      <img src ="./assets/diamond.png" width="50%">
+
 
     </div>
 
+    <img class='diamond img' src ="./assets/diamond.png" width="50%">
+
     <div class="diamond selector">
 
-      <article class="diamond">
-       <img>
-       <p>diamond </p>
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>ASSCHER </p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>CUSHION </p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>RADIANT</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>HEART</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>MARQUISE</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>OVAL</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>PEAR </p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>PRINCESS</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>EMERALD</p>
+      </article>
+
+      <article class="diamond card">
+        <img src="./assets/diamond_icon.png" height="50px" width="50px">
+       <p>ROUND</p>
       </article>
 
 
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
-
-      <article class="diamond">
-        <img>
-        <p>diamond </p>
-       </article>
 
 
     </div>
