diamond selection section built out and styled, edited nav bar styling in wide view"

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="nav header">
   <img  class="logo" src="./assets/Asset 4@3x.png">
 
-  <nav>
+  <nav class="nav links">
     <ul>
       <li><a>Home</a></li>
       <li><a>Order</a></li>
@@ -27,12 +27,12 @@
   </nav>
 
 
-  <nav>
+  <nav class="other links">
     <ul>
-      <li><a>Home</a></li>
-      <li><a>Order</a></li>
-      <li><a>About</a></li>
-      <li><a>Contact</a></li>
+      <li><i class="bi bi-heart"></i></li>
+      <li><i class="bi bi-bag"></i></li>
+      <li><i class="bi bi-person"></i></li>
+
     </ul>
   </nav>
 
@@ -104,13 +104,17 @@
       <h6>LAB-GROWN DIAMONDS</h6>
       <h1>BECAUSE YOUR OCCASION IS BRILLIANT </h1>
       <p>Fancy-shaped Diamonds give you a chance to express your unique personality</p>
-
-
     </div>
 
     <img class='diamond img' src ="./assets/diamond.png" width="50%">
 
+
+    <div class="diamond wrapper">
+       <h3>EXPLORE DIAMONDS</h3>
+
     <div class="diamond selector">
+
+
 
       <article class="diamond card">
         <img src="./assets/diamond_icon.png" height="50px" width="50px">
@@ -166,6 +170,8 @@
 
 
     </div>
+
+  </div>
 
 
   </section>
