--- a/index.html
+++ b/index.html
@@ -111,11 +111,7 @@
 
     <div class="diamond wrapper">
        <h3>EXPLORE DIAMONDS</h3>
-
     <div class="diamond selector">
-
-
-
       <article class="diamond card">
         <img src="./assets/diamond_icon.png" height="50px" width="50px">
        <p>ASSCHER </p>
@@ -165,22 +161,40 @@
         <img src="./assets/diamond_icon.png" height="50px" width="50px">
        <p>ROUND</p>
       </article>
-
-
-
-
     </div>
-
   </div>
-
 
   </section>
 
+  <section class="contact">
+
+    <article class="contactInfo">
+
+      <h1>ONLY AT MANGATA</h1>
+      <p>When it comes to celebrations we strive to make you experience as brillinat as our jewellery with the perfect pieces for every occasion</p>
+      <button>E-MAIL</button>
+      <button>Call Us</button>
+      <button>Live Chat</button>
+    </article>
+
+    <section class="contactSection">
+      <img class="contactImage" src="./assets/gloveRing.png">
+    </section>
+
+  </section>
+
+  <section>
+    <footer>
+
+      <p>COPYRIGHT</p>
+      </footer>
+
+  </section>
+
+
 </main>
 
-<footer>
 
-</footer>
 
 
 </html>
