finished contact styling and footer styling

--- a/index.html
+++ b/index.html
@@ -169,12 +169,16 @@
   <section class="contact">
 
     <article class="contactInfo">
+       <div class="infoText">
+
 
       <h1>ONLY AT MANGATA</h1>
       <p>When it comes to celebrations we strive to make you experience as brillinat as our jewellery with the perfect pieces for every occasion</p>
-      <button>E-MAIL</button>
-      <button>Call Us</button>
-      <button>Live Chat</button>
+      <button class="btn">E-mail</button>
+      <button class="btn">Call Us</button>
+      <button class="btn">Live Chat</button>
+
+    </div>
     </article>
 
     <section class="contactSection">
@@ -185,8 +189,8 @@
 
   <section>
     <footer>
-
-      <p>COPYRIGHT</p>
+      <p>Jovanni Morales</p>
+      <p>Copyright @ 2023</p>
       </footer>
 
   </section>
