finished main html and styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   <section class="hero">
     <article>
       <h2>DESIGN THE RING OF YOUR DREAMS</h2>
-      <p> Bring your moment to life </p>
+      <p> Bring your moment to life with a handcrafted design. Find your style below. </p>
+      <p>Scroll to explore</p>
     </article>
   </section>
 
